[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "trafilatura>=2.0.0",
    "schedule>=1.2.2",
    "yfinance>=0.2.65",
    "praw>=7.8.1",
    "tweepy>=4.16.0",
    "scikit-learn>=1.7.0",
    "pandas>=2.3.1",
    "numpy>=2.3.1",
    "joblib>=1.5.1",
    "requests>=2.32.4",
    "eventlet>=0.40.1",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]
